--- a/style.css
+++ b/style.css
@@ -74,9 +74,9 @@ input{
 
 #random-meal{
     margin: auto;
-    height:50vh;
+    height:60vh;
     width: 50vw;
-    /* border: 2px solid red; */
+    border: 2px solid red;
 }
 
 hr{
