--- a/style.css
+++ b/style.css
@@ -74,9 +74,11 @@ input{
 
 #random-meal{
     margin: auto;
-    height:60vh;
-    width: 50vw;
-    border: 2px solid red;
+    height:400px;
+    width: 30vw;
+    border:0.5px solid black;
+    background-color:rgba(255, 166, 0, 0.329);
+    border-radius: 10px;
 }
 
 hr{
@@ -102,8 +104,7 @@ hr{
     display: flex;
     font-size:.9em;
     flex-direction: column;
-    flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     margin:5px;
     flex-wrap: wrap;
