--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ input{
     margin: auto;
     font-family: 'Itim';
     height:10%;
-    width: 20%;
+    width: 250px;
     border-radius: 20px;
     text-align: center;
     font-size: 20px;
@@ -75,7 +75,7 @@ input{
 #random-meal{
     margin: auto;
     height:400px;
-    width: 30vw;
+    width: 350px;
     border:0.5px solid black;
     background-color:rgba(255, 166, 0, 0.329);
     border-radius: 10px;
@@ -158,5 +158,8 @@ hr{
     #random-meal{
         display: block;
         margin: 0;
+        width: max-content;
+        height: max-content;
+        padding: 5px;
     }
 }
